--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 	height: 100vh;
 	z-index: 0;
 	pointer-events: none;
-	background: radial-gradient(ellipse at 60% 40%, #e1e1e8 0%, #aaaaf2 80%),
+	background: radial-gradient(ellipse at 60% 40%, #e1e1e8 0%, rgb(64, 152, 139) 80%),
 							repeating-radial-gradient(circle at 20% 80%, #fff 1px, transparent 2px, transparent 100px),
 							repeating-radial-gradient(circle at 80% 20%, #fff 1px, transparent 2px, transparent 120px),
 							repeating-radial-gradient(circle at 50% 50%, #fff 1.5px, transparent 2.5px, transparent 150px);
